# ruff-pre-commit

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .version  README.md  SECURITY.md  mirror.py  pyproject.toml  requirements-dev.txt  setup.py  update_version.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  main.yml  release.yml
src/ruff_format_docs/: __init__.py  __main__.py
src/ruffen_docs/: __init__.py  __main__.py
tests/: __init__.py  test_ruff_format_docs.py  test_ruffen_docs.py
